# RISCVProjectGenerator

./: CMakeLists.txt  config.yaml  project-generator.py  project_generator.py
templates/: CMakeLists.template  Makefile.template
templates/bash/: end_debug.sh  start_debug.template  start_spike.template
templates/bash_templates/: start_debug.template
templates/eclipse/: .cproject  .project  Debug.template  cproject.template  project.template
templates/vscode/: launch.template  settings.json  tasks.template
templates/vscode_templates/: c_cpp_properties.json  c_cpp_properties.template  launch.template  tasks.template
test_projects/: Makefile
test_projects/outputs/: Makefile
test_projects/outputs/make/: Makefile  start_debug.sh  util.c
test_projects/outputs/vscode/: CMakeLists.txt  main.c
tests/: test_project_generator.py
tests/riscv_make/: Makefile
tests/riscv_make/bsp/: syscalls.c
tests/riscv_make_debug/: Makefile  start_debug.sh
tests/riscv_vscode/: CMakeLists.txt  generator.cfg
