cmake_minimum_required(VERSION 3.10)
project(test C)
set(CMAKE_C_COMPILER riscv64-unknown-elf-gcc)
set ( CMAKE_C_FLAGS -g )
add_executable(vv_output.elf /home/lavrinenko/project/code/vv/rot13.c)
SET(LINKER_SCRIPT /home/lavrinenko/project/code/vv/spike.lds)
set_target_properties(vv_output.elf PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set_target_properties(vv_output.elf PROPERTIES LINK_DEPENDS "${LINKER_SCRIPT}")
SET(CMAKE_EXE_LINKER_FLAGS  "-T ${LINKER_SCRIPT} -g -nostartfiles")
